@@ -22,9 +22,9 @@ if NEED_LIB
 include_HEADERS =
 endif
 endif
-if NEED_MAN
+# Attempts to wrap that in NEED_MAN failed. So just live with the
+# empty directory.
 dist_man_MANS =
-endif
 CLEANFILES =
 TESTS =
 XFAIL_TESTS =
@@ -66,16 +66,11 @@ endif
 endif
 
 if BUILD_PROGRAMS
-if NEED_MAN
 dist_man_MANS += man1/mpg123.1 man1/out123.1
-endif
 endif
 
 # mpg123.spec is autogenerated but needs to be present in tarball!
-# Also, man pages are not included when behind conditionals.
 EXTRA_DIST += \
-  man1/mpg123.1 \
-  man1/out123.1 \
   mpg123.spec \
   makedll.sh \
   windows-builds.sh \
